Semantico/src/sintaxe.output
Gramática

    0 $accept: program $end

    1 program: declarations
    2        | %empty

    3 declarations: declarations declaration
    4             | declaration

    5 declaration: function
    6            | varDecl PV
    7            | error PV

    8 $@1: %empty

    9 $@2: %empty

   10 function: funcDecl ABRE_P $@1 parameters FECHA_P $@2 ABRE_C moreStmt FECHA_C

   11 $@3: %empty

   12 $@4: %empty

   13 function: error ABRE_P $@3 parameters FECHA_P $@4 ABRE_C moreStmt FECHA_C
   14         | funcDecl ABRE_P FECHA_P ABRE_C moreStmt FECHA_C
   15         | error ABRE_P FECHA_P ABRE_C moreStmt FECHA_C

   16 funcDecl: TIPO ID
   17         | TIPO LIST ID

   18 parameters: parameters VIRG varDecl
   19           | varDecl

   20 moreStmt: moreStmt block
   21         | block

   22 block: stmt
   23      | ABRE_C moreStmt FECHA_C

   24 stmt: conditional
   25     | iteration
   26     | varDecl PV
   27     | attribuition PV
   28     | io PV
   29     | ret PV
   30     | error

   31 conditional: IF ABRE_P attribuition FECHA_P bracesStmt
   32            | IF ABRE_P attribuition FECHA_P bracesStmt ELSE bracesStmt
   33            | IF ABRE_P error FECHA_P bracesStmt

   34 bracesStmt: ABRE_C moreStmt FECHA_C
   35           | stmt

   36 iteration: FOR ABRE_P iteArgs FECHA_P bracesStmt

   37 $@5: %empty

   38 iteration: FOR ABRE_P error $@5 FECHA_P bracesStmt

   39 iteArgs: expIte PV expIte PV expIte

   40 expIte: attribuition
   41       | %empty

   42 io: ENTRADA ABRE_P ID FECHA_P
   43   | SAIDA ABRE_P attribuition FECHA_P
   44   | SAIDA ABRE_P STRING FECHA_P
   45   | ENTRADA ABRE_P error FECHA_P
   46   | SAIDA ABRE_P error FECHA_P

   47 varDecl: TIPO ID
   48        | TIPO LIST ID

   49 attribuition: ID ATRIB expLogic
   50             | expLogic

   51 expLogic: expLogic LOG_OP_OU andLogic
   52         | andLogic

   53 andLogic: andLogic LOG_OP_E expComp
   54         | expComp

   55 expComp: expComp REL_OP_BAIXA expRel
   56        | expRel

   57 expRel: expRel REL_OP_ALTA expArit
   58       | expArit

   59 expArit: expArit ARIT_OP_MAIS expMul
   60        | expArit ARIT_OP_MENOS expMul
   61        | expMul

   62 expMul: expMul ARIT_OP_ALTA negElement
   63       | negElement

   64 negElement: LOG_OP_NEG expList
   65           | ARIT_OP_MENOS expList
   66           | expList

   67 expList: LIST_OP_UN element
   68        | LIST_OP_HEADER element
   69        | expList LIST_OP_BIN element
   70        | expList LIST_OP_CONSTRUTOR element
   71        | element

   72 element: ID
   73        | ABRE_P attribuition FECHA_P
   74        | ID ABRE_P arguments FECHA_P
   75        | ID ABRE_P FECHA_P
   76        | CONST_INT
   77        | CONST_FLOAT
   78        | NIL

   79 arguments: arguments VIRG attribuition
   80          | attribuition

   81 ret: RETURN attribuition


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256) 7 13 15 30 33 38 45 46
    IF <tok> (258) 31 32 33
    ELSE <tok> (259) 32
    FOR <tok> (260) 36 38
    RETURN <tok> (261) 81
    TIPO <tok> (262) 16 17 47 48
    LIST <tok> (263) 17 48
    ENTRADA <tok> (264) 42 45
    SAIDA <tok> (265) 43 44 46
    VIRG <tok> (266) 18 79
    PV <tok> (267) 6 7 26 27 28 29 39
    ATRIB <tok> (268) 49
    LOG_OP_OU <tok> (269) 51
    LOG_OP_E <tok> (270) 53
    REL_OP_BAIXA <tok> (271) 55
    REL_OP_ALTA <tok> (272) 57
    LIST_OP_BIN <tok> (273) 69
    LIST_OP_CONSTRUTOR <tok> (274) 70
    LIST_OP_UN <tok> (275) 67
    LIST_OP_HEADER <tok> (276) 68
    ARIT_OP_MAIS <tok> (277) 59
    ARIT_OP_MENOS <tok> (278) 60 65
    ARIT_OP_ALTA <tok> (279) 62
    LOG_OP_NEG <tok> (280) 64
    CONST_INT <tok> (281) 76
    CONST_FLOAT <tok> (282) 77
    STRING <tok> (283) 44
    NIL <tok> (284) 78
    ID <tok> (285) 16 17 42 47 48 49 72 74 75
    ABRE_P <tok> (286) 10 13 14 15 31 32 33 36 38 42 43 44 45 46 73 74 75
    FECHA_P <tok> (287) 10 13 14 15 31 32 33 36 38 42 43 44 45 46 73 74 75
    ABRE_C <tok> (288) 10 13 14 15 23 34
    FECHA_C <tok> (289) 10 13 14 15 23 34


Não terminais com as regras onde eles aparecem

    $accept (35)
        à esquerda: 0
    program (36)
        à esquerda: 1 2
        à direita: 0
    declarations <lista> (37)
        à esquerda: 3 4
        à direita: 1 3
    declaration <no> (38)
        à esquerda: 5 6 7
        à direita: 3 4
    function <no> (39)
        à esquerda: 10 13 14 15
        à direita: 5
    $@1 (40)
        à esquerda: 8
        à direita: 10
    $@2 (41)
        à esquerda: 9
        à direita: 10
    $@3 (42)
        à esquerda: 11
        à direita: 13
    $@4 (43)
        à esquerda: 12
        à direita: 13
    funcDecl <no> (44)
        à esquerda: 16 17
        à direita: 10 14
    parameters <no> (45)
        à esquerda: 18 19
        à direita: 10 13 18
    moreStmt <lista> (46)
        à esquerda: 20 21
        à direita: 10 13 14 15 20 23 34
    block <no> (47)
        à esquerda: 22 23
        à direita: 20 21
    stmt <no> (48)
        à esquerda: 24 25 26 27 28 29 30
        à direita: 22 35
    conditional <no> (49)
        à esquerda: 31 32 33
        à direita: 24
    bracesStmt <no> (50)
        à esquerda: 34 35
        à direita: 31 32 33 36 38
    iteration <no> (51)
        à esquerda: 36 38
        à direita: 25
    $@5 (52)
        à esquerda: 37
        à direita: 38
    iteArgs <no> (53)
        à esquerda: 39
        à direita: 36
    expIte <no> (54)
        à esquerda: 40 41
        à direita: 39
    io <no> (55)
        à esquerda: 42 43 44 45 46
        à direita: 28
    varDecl <no> (56)
        à esquerda: 47 48
        à direita: 6 18 19 26
    attribuition <no> (57)
        à esquerda: 49 50
        à direita: 27 31 32 40 43 73 79 80 81
    expLogic <no> (58)
        à esquerda: 51 52
        à direita: 49 50 51
    andLogic <no> (59)
        à esquerda: 53 54
        à direita: 51 52 53
    expComp <no> (60)
        à esquerda: 55 56
        à direita: 53 54 55
    expRel <no> (61)
        à esquerda: 57 58
        à direita: 55 56 57
    expArit <no> (62)
        à esquerda: 59 60 61
        à direita: 57 58 59 60
    expMul <no> (63)
        à esquerda: 62 63
        à direita: 59 60 61 62
    negElement <no> (64)
        à esquerda: 64 65 66
        à direita: 62 63
    expList <no> (65)
        à esquerda: 67 68 69 70 71
        à direita: 64 65 66 69 70
    element <no> (66)
        à esquerda: 72 73 74 75 76 77 78
        à direita: 67 68 69 70 71
    arguments <lista> (67)
        à esquerda: 79 80
        à direita: 74 79
    ret <no> (68)
        à esquerda: 81
        à direita: 29


Estado 0

    0 $accept: • program $end

    error  deslocar, e ir ao estado 1
    TIPO   deslocar, e ir ao estado 2

    $end  reduzir usando a regra 2 (program)

    program       ir ao estado 3
    declarations  ir ao estado 4
    declaration   ir ao estado 5
    function      ir ao estado 6
    funcDecl      ir ao estado 7
    varDecl       ir ao estado 8


Estado 1

    7 declaration: error • PV
   13 function: error • ABRE_P $@3 parameters FECHA_P $@4 ABRE_C moreStmt FECHA_C
   15         | error • ABRE_P FECHA_P ABRE_C moreStmt FECHA_C

    PV      deslocar, e ir ao estado 9
    ABRE_P  deslocar, e ir ao estado 10


Estado 2

   16 funcDecl: TIPO • ID
   17         | TIPO • LIST ID
   47 varDecl: TIPO • ID
   48        | TIPO • LIST ID

    LIST  deslocar, e ir ao estado 11
    ID    deslocar, e ir ao estado 12


Estado 3

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 13


Estado 4

    1 program: declarations •
    3 declarations: declarations • declaration

    error  deslocar, e ir ao estado 1
    TIPO   deslocar, e ir ao estado 2

    $end  reduzir usando a regra 1 (program)

    declaration  ir ao estado 14
    function     ir ao estado 6
    funcDecl     ir ao estado 7
    varDecl      ir ao estado 8


Estado 5

    4 declarations: declaration •

    $end   reduzir usando a regra 4 (declarations)
    error  reduzir usando a regra 4 (declarations)
    TIPO   reduzir usando a regra 4 (declarations)


Estado 6

    5 declaration: function •

    $end   reduzir usando a regra 5 (declaration)
    error  reduzir usando a regra 5 (declaration)
    TIPO   reduzir usando a regra 5 (declaration)


Estado 7

   10 function: funcDecl • ABRE_P $@1 parameters FECHA_P $@2 ABRE_C moreStmt FECHA_C
   14         | funcDecl • ABRE_P FECHA_P ABRE_C moreStmt FECHA_C

    ABRE_P  deslocar, e ir ao estado 15


Estado 8

    6 declaration: varDecl • PV

    PV  deslocar, e ir ao estado 16


Estado 9

    7 declaration: error PV •

    $end   reduzir usando a regra 7 (declaration)
    error  reduzir usando a regra 7 (declaration)
    TIPO   reduzir usando a regra 7 (declaration)


Estado 10

   13 function: error ABRE_P • $@3 parameters FECHA_P $@4 ABRE_C moreStmt FECHA_C
   15         | error ABRE_P • FECHA_P ABRE_C moreStmt FECHA_C

    FECHA_P  deslocar, e ir ao estado 17

    TIPO  reduzir usando a regra 11 ($@3)

    $@3  ir ao estado 18


Estado 11

   17 funcDecl: TIPO LIST • ID
   48 varDecl: TIPO LIST • ID

    ID  deslocar, e ir ao estado 19


Estado 12

   16 funcDecl: TIPO ID •
   47 varDecl: TIPO ID •

    PV      reduzir usando a regra 47 (varDecl)
    ABRE_P  reduzir usando a regra 16 (funcDecl)


Estado 13

    0 $accept: program $end •

    $padrão  aceitar


Estado 14

    3 declarations: declarations declaration •

    $end   reduzir usando a regra 3 (declarations)
    error  reduzir usando a regra 3 (declarations)
    TIPO   reduzir usando a regra 3 (declarations)


Estado 15

   10 function: funcDecl ABRE_P • $@1 parameters FECHA_P $@2 ABRE_C moreStmt FECHA_C
   14         | funcDecl ABRE_P • FECHA_P ABRE_C moreStmt FECHA_C

    FECHA_P  deslocar, e ir ao estado 20

    TIPO  reduzir usando a regra 8 ($@1)

    $@1  ir ao estado 21


Estado 16

    6 declaration: varDecl PV •

    $end   reduzir usando a regra 6 (declaration)
    error  reduzir usando a regra 6 (declaration)
    TIPO   reduzir usando a regra 6 (declaration)


Estado 17

   15 function: error ABRE_P FECHA_P • ABRE_C moreStmt FECHA_C

    ABRE_C  deslocar, e ir ao estado 22


Estado 18

   13 function: error ABRE_P $@3 • parameters FECHA_P $@4 ABRE_C moreStmt FECHA_C

    TIPO  deslocar, e ir ao estado 23

    parameters  ir ao estado 24
    varDecl     ir ao estado 25


Estado 19

   17 funcDecl: TIPO LIST ID •
   48 varDecl: TIPO LIST ID •

    PV      reduzir usando a regra 48 (varDecl)
    ABRE_P  reduzir usando a regra 17 (funcDecl)


Estado 20

   14 function: funcDecl ABRE_P FECHA_P • ABRE_C moreStmt FECHA_C

    ABRE_C  deslocar, e ir ao estado 26


Estado 21

   10 function: funcDecl ABRE_P $@1 • parameters FECHA_P $@2 ABRE_C moreStmt FECHA_C

    TIPO  deslocar, e ir ao estado 23

    parameters  ir ao estado 27
    varDecl     ir ao estado 25


Estado 22

   15 function: error ABRE_P FECHA_P ABRE_C • moreStmt FECHA_C

    error           deslocar, e ir ao estado 28
    IF              deslocar, e ir ao estado 29
    FOR             deslocar, e ir ao estado 30
    RETURN          deslocar, e ir ao estado 31
    TIPO            deslocar, e ir ao estado 161
    ENTRADA         deslocar, e ir ao estado 32
    SAIDA           deslocar, e ir ao estado 33
    LIST_OP_UN      deslocar, e ir ao estado 34
    LIST_OP_HEADER  deslocar, e ir ao estado 35
    ARIT_OP_MENOS   deslocar, e ir ao estado 36
    LOG_OP_NEG      deslocar, e ir ao estado 37
    CONST_INT       deslocar, e ir ao estado 38
    CONST_FLOAT     deslocar, e ir ao estado 39
    NIL             deslocar, e ir ao estado 40
    ID              deslocar, e ir ao estado 41
    ABRE_P          deslocar, e ir ao estado 42
    ABRE_C          deslocar, e ir ao estado 43

    moreStmt      ir ao estado 44
    block         ir ao estado 45
    stmt          ir ao estado 46
    conditional   ir ao estado 47
    iteration     ir ao estado 48
    io            ir ao estado 49
    varDecl       ir ao estado 50
    attribuition  ir ao estado 51
    expLogic      ir ao estado 52
    andLogic      ir ao estado 53
    expComp       ir ao estado 54
    expRel        ir ao estado 55
    expArit       ir ao estado 56
    expMul        ir ao estado 57
    negElement    ir ao estado 58
    expList       ir ao estado 59
    element       ir ao estado 60
    ret           ir ao estado 61


Estado 23

   47 varDecl: TIPO • ID
   48        | TIPO • LIST ID

    LIST  deslocar, e ir ao estado 62
    ID    deslocar, e ir ao estado 63


Estado 24

   13 function: error ABRE_P $@3 parameters • FECHA_P $@4 ABRE_C moreStmt FECHA_C
   18 parameters: parameters • VIRG varDecl

    VIRG     deslocar, e ir ao estado 64
    FECHA_P  deslocar, e ir ao estado 65


Estado 25

   19 parameters: varDecl •

    VIRG     reduzir usando a regra 19 (parameters)
    FECHA_P  reduzir usando a regra 19 (parameters)


Estado 26

   14 function: funcDecl ABRE_P FECHA_P ABRE_C • moreStmt FECHA_C

    error           deslocar, e ir ao estado 28
    IF              deslocar, e ir ao estado 29
    FOR             deslocar, e ir ao estado 30
    RETURN          deslocar, e ir ao estado 31
    TIPO            deslocar, e ir ao estado 161
    ENTRADA         deslocar, e ir ao estado 32
    SAIDA           deslocar, e ir ao estado 33
    LIST_OP_UN      deslocar, e ir ao estado 34
    LIST_OP_HEADER  deslocar, e ir ao estado 35
    ARIT_OP_MENOS   deslocar, e ir ao estado 36
    LOG_OP_NEG      deslocar, e ir ao estado 37
    CONST_INT       deslocar, e ir ao estado 38
    CONST_FLOAT     deslocar, e ir ao estado 39
    NIL             deslocar, e ir ao estado 40
    ID              deslocar, e ir ao estado 41
    ABRE_P          deslocar, e ir ao estado 42
    ABRE_C          deslocar, e ir ao estado 43

    moreStmt      ir ao estado 66
    block         ir ao estado 45
    stmt          ir ao estado 46
    conditional   ir ao estado 47
    iteration     ir ao estado 48
    io            ir ao estado 49
    varDecl       ir ao estado 50
    attribuition  ir ao estado 51
    expLogic      ir ao estado 52
    andLogic      ir ao estado 53
    expComp       ir ao estado 54
    expRel        ir ao estado 55
    expArit       ir ao estado 56
    expMul        ir ao estado 57
    negElement    ir ao estado 58
    expList       ir ao estado 59
    element       ir ao estado 60
    ret           ir ao estado 61


Estado 27

   10 function: funcDecl ABRE_P $@1 parameters • FECHA_P $@2 ABRE_C moreStmt FECHA_C
   18 parameters: parameters • VIRG varDecl

    VIRG     deslocar, e ir ao estado 64
    FECHA_P  deslocar, e ir ao estado 67


Estado 28

   30 stmt: error •

    error           reduzir usando a regra 30 (stmt)
    IF              reduzir usando a regra 30 (stmt)
    FOR             reduzir usando a regra 30 (stmt)
    RETURN          reduzir usando a regra 30 (stmt)
    TIPO            reduzir usando a regra 30 (stmt)
    ENTRADA         reduzir usando a regra 30 (stmt)
    SAIDA           reduzir usando a regra 30 (stmt)
    LIST_OP_UN      reduzir usando a regra 30 (stmt)
    LIST_OP_HEADER  reduzir usando a regra 30 (stmt)
    ARIT_OP_MENOS   reduzir usando a regra 30 (stmt)
    LOG_OP_NEG      reduzir usando a regra 30 (stmt)
    CONST_INT       reduzir usando a regra 30 (stmt)
    CONST_FLOAT     reduzir usando a regra 30 (stmt)
    NIL             reduzir usando a regra 30 (stmt)
    ID              reduzir usando a regra 30 (stmt)
    ABRE_P          reduzir usando a regra 30 (stmt)
    ABRE_C          reduzir usando a regra 30 (stmt)
    FECHA_C         reduzir usando a regra 30 (stmt)


Estado 29

   31 conditional: IF • ABRE_P attribuition FECHA_P bracesStmt
   32            | IF • ABRE_P attribuition FECHA_P bracesStmt ELSE bracesStmt
   33            | IF • ABRE_P error FECHA_P bracesStmt

    ABRE_P  deslocar, e ir ao estado 68


Estado 30

   36 iteration: FOR • ABRE_P iteArgs FECHA_P bracesStmt
   38          | FOR • ABRE_P error $@5 FECHA_P bracesStmt

    ABRE_P  deslocar, e ir ao estado 69


Estado 31

   81 ret: RETURN • attribuition

    LIST_OP_UN      deslocar, e ir ao estado 34
    LIST_OP_HEADER  deslocar, e ir ao estado 35
    ARIT_OP_MENOS   deslocar, e ir ao estado 36
    LOG_OP_NEG      deslocar, e ir ao estado 37
    CONST_INT       deslocar, e ir ao estado 38
    CONST_FLOAT     deslocar, e ir ao estado 39
    NIL             deslocar, e ir ao estado 40
    ID              deslocar, e ir ao estado 41
    ABRE_P          deslocar, e ir ao estado 42

    attribuition  ir ao estado 70
    expLogic      ir ao estado 52
    andLogic      ir ao estado 53
    expComp       ir ao estado 54
    expRel        ir ao estado 55
    expArit       ir ao estado 56
    expMul        ir ao estado 57
    negElement    ir ao estado 58
    expList       ir ao estado 59
    element       ir ao estado 60


Estado 32

   42 io: ENTRADA • ABRE_P ID FECHA_P
   45   | ENTRADA • ABRE_P error FECHA_P

    ABRE_P  deslocar, e ir ao estado 71


Estado 33

   43 io: SAIDA • ABRE_P attribuition FECHA_P
   44   | SAIDA • ABRE_P STRING FECHA_P
   46   | SAIDA • ABRE_P error FECHA_P

    ABRE_P  deslocar, e ir ao estado 72


Estado 34

   67 expList: LIST_OP_UN • element

    CONST_INT    deslocar, e ir ao estado 38
    CONST_FLOAT  deslocar, e ir ao estado 39
    NIL          deslocar, e ir ao estado 40
    ID           deslocar, e ir ao estado 73
    ABRE_P       deslocar, e ir ao estado 42

    element  ir ao estado 74


Estado 35

   68 expList: LIST_OP_HEADER • element

    CONST_INT    deslocar, e ir ao estado 38
    CONST_FLOAT  deslocar, e ir ao estado 39
    NIL          deslocar, e ir ao estado 40
    ID           deslocar, e ir ao estado 73
    ABRE_P       deslocar, e ir ao estado 42

    element  ir ao estado 75


Estado 36

   65 negElement: ARIT_OP_MENOS • expList
